--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,54 +1,102 @@
-# remap c-b to c-a
+# -- general -------------------------------------------------------------------
+
+# Add truecolor support
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Default terminal is 256 colors
+#set -g default-terminal "screen-256color"
+
+set -g default-terminal "xterm-256color-italic"
+set -ga terminal-overrides ",xterm-256color-italic:Tc"
+
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-set-option -s escape-time 0
 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+set -g base-index 1
 
-# reload config using r
-bind r source-file ~/.tmux.conf
+# Automatically set window title
+set-option -g set-titles on
+set-window-option -g automatic-rename on
+set -g set-titles-string '#h ❐ #S ● #I #W'
+set-option -g renumber-windows on
 
-# switch panes using Alt-arrow without prefix
+#set -g default-terminal screen-256color
+set -g status-keys vi
+set -g history-limit 10000
+
+setw -g mode-keys vi
+setw -g monitor-activity on
+
+bind-key v split-window -h
+bind-key s split-window -v
+bind-key | split-window -h
+bind-key - split-window -v
+
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-## Panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
-## Status bar
-# status line
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
-set -g base-index 1
-setw -g pane-base-index 1
+# No delay for escape key press
+set -sg escape-time 0
 
-# window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+# Reload tmux config
+bind r source-file ~/.tmux.conf
 
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magnetal]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W"
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
+# create session
+bind C-c new-session
 
+# find session
+bind C-f command-prompt -p find-session 'switch-client -t %%'
 
+# THEME
+set -g status-bg black
+set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+# "$@"
 
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# for vim
+# set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-# setup colors
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+run '~/.tmux/plugins/tpm/tpm'
+#
 
