adds tmux status bar theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,17 +1,15 @@
 # -- general -------------------------------------------------------------------
 
-# Add truecolor support
-#set-option -ga terminal-overrides ",xterm-256color:Tc"
-# Default terminal is 256 colors
-#set -g default-terminal "screen-256color"
-
 set -g default-terminal "xterm-256color-italic"
 set -ga terminal-overrides ",xterm-256color-italic:Tc"
+
+set -s escape-time 10                     # faster command sequences
+set -sg repeat-time 600                   # increase repeat timeout
+set -s focus-events on
 
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-
 
 set -g base-index 1
 
@@ -21,6 +19,9 @@ set-window-option -g automatic-rename on
 set -g set-titles-string '#h ❐ #S ● #I #W'
 set-option -g renumber-windows on
 
+set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
+setw -q -g utf8 on
+
 #set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
@@ -28,15 +29,22 @@ set -g history-limit 10000
 setw -g mode-keys vi
 setw -g monitor-activity on
 
+# reload configuration
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
 bind-key v split-window -h
 bind-key s split-window -v
 bind-key | split-window -h
 bind-key - split-window -v
+bind > swap-pane -D       # swap current pane with the next one
+bind < swap-pane -U       # swap current pane with the previous one
 
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
+bind + resize-pane -Z 		# maximize pane
+
+bind-key J resize-pane -D 2
+bind-key K resize-pane -U 2
+bind-key H resize-pane -L 2
+bind-key L resize-pane -R 2
 
 bind-key M-j resize-pane -D
 bind-key M-k resize-pane -U
@@ -48,6 +56,11 @@ bind h select-pane -L
 bind j select-pane -D 
 bind k select-pane -U
 bind l select-pane -R
+unbind n
+unbind p
+bind -r C-h previous-window # select previous window
+bind -r C-l next-window     # select next window
+bind Tab last-window        # move to last active window
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -74,19 +87,73 @@ bind r source-file ~/.tmux.conf
 # create session
 bind C-c new-session
 
-# find session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # THEME
-set -g status-bg black
-set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
-# "$@"
+set -g status-interval 1
+
+set -g status-fg colour238
+set -g status-bg colour233
+
+# left status bar
+set -g status-left-bg colour233
+set -g status-left-fg colour243
+set -g status-left-length 40
+set -g status-left "#[fg=colour232,bg=colour245,bold] #S #[fg=colour245,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
+
+# right status bar
+set -g status-right-bg colour233
+set -g status-right-fg colour243
+set -g status-right-length 150
+set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
+
+# Window status
+set -g window-status-format "  #I:#W#F  "
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour250,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
+
+# Current window status
+set -g window-status-current-bg black
+set -g window-status-current-fg colour250
+
+# Window with activity status
+set -g window-status-activity-bg colour243 # fg and bg are flipped here due to
+set -g window-status-activity-fg colour233 # a bug in tmux
+
+# Window separator
+set -g window-status-separator ""
+
+# Window status alignment
+set -g status-justify centre
+
+# Pane border
+set -g pane-border-bg default
+set -g pane-border-fg colour235
+
+# Active pane border
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour240
+
+# Pane number indicator
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
+
+# Clock mode
+set -g clock-mode-colour colour240
+set -g clock-mode-style 24
+
+# Message
+set -g message-bg colour245
+set -g message-fg colour232
+
+# Command message
+set -g message-command-bg colour233
+set -g message-command-fg colour250
+
+# Mode
+set -g mode-bg colour243
+set -g mode-fg colour232
+
+
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -98,5 +165,4 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
-#
 
