--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -15,6 +15,7 @@ env:
 
 # Window dimensions in character columns and lines
 # (changes require restart)
+#window:
 dimensions:
   columns: 80
   lines: 24
@@ -25,6 +26,8 @@ dimensions:
 padding:
   x: 2
   y: 2
+
+#decorations: false
 
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
