idk some changes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,9 +15,12 @@ set -g base-index 1
 
 # Automatically set window title
 set-option -g set-titles on
-set-window-option -g automatic-rename on
+#set-window-option -g automatic-rename on
 set -g set-titles-string '#h ❐ #S ● #I #W'
 set-option -g renumber-windows on
+set -g window-status-format '#I:#(pwd="#{pane_current_path}; echo ${pwd####*/}")#F'
+set -g window-status-current-format '#I:#(pwd="#{pane_current_path}; echo ${pwd####*/}")#F'
+set -g status-interval 1
 
 setw -q -g utf8 on
 
