--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,7 +15,6 @@ set -g base-index 1
 
 # Automatically set window title
 set-option -g set-titles on
-#set-window-option -g automatic-rename on
 set -g set-titles-string '#h ❐ #S ● #I #W'
 set-option -g renumber-windows on
 set -g window-status-format '#I:#(pwd="#{pane_current_path}; echo ${pwd####*/}")#F'
@@ -107,7 +106,7 @@ set -g status-left "#[fg=colour232,bg=colour245,bold] #S #[fg=colour245,bg=colou
 set -g status-right-bg colour233
 set -g status-right-fg colour243
 set -g status-right-length 150
-set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
+set -g status-right "Battery: #[fg=colour240,bg=colour233,bold]#(pmset -g batt | awk 'NR==2 { gsub(/;/,\"\"); print $3 }') #[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
 
 # Window status
 set -g window-status-format "  #I:#W#F  "
