--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -158,10 +158,10 @@ set -g mode-fg colour232
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-strategy-nvim 'session'
-set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @resurrect-strategy-nvim 'session'
+#set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
 
