--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,10 +42,10 @@ bind < swap-pane -U       # swap current pane with the previous one
 
 bind + resize-pane -Z 		# maximize pane
 
-bind-key J resize-pane -D 2
-bind-key K resize-pane -U 2
-bind-key H resize-pane -L 2
-bind-key L resize-pane -R 2
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r h resize-pane -L 5
+bind -r l resize-pane -R 5
 
 bind-key M-j resize-pane -D
 bind-key M-k resize-pane -U
@@ -53,10 +53,10 @@ bind-key M-h resize-pane -L
 bind-key M-l resize-pane -R
 
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D 
+# bind k select-pane -U
+# bind l select-pane -R
 unbind n
 unbind p
 bind -r C-h previous-window # select previous window
