--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,35 +1,14 @@
 # vim:fileencoding=utf-8:ft=conf
 
-# Font family. You can also specify different fonts for the
-# bold/italic/bold-italic variants. By default they are derived automatically,
-# by the OSes font system. Setting them manually is useful for font families
-# that have many weight variants like Book, Medium, Thick, etc. For example:
-# font_family Operator Mono Book
-# bold_font Operator Mono Medium
-# italic_font Operator Mono Book Italic
-# bold_italic_font Operator Mono Medium Italic
-#
-# You can get a list of full family names available on your computer by running
-# kitty list-fonts
-# The default values shown below rely on your OS to choose an appropriate monospace font family.
-font_family      IBM Plex Mono
+font_family      Hack Nerd Font Mono
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        13.5
-
-# The amount the font size is changed by (in pts) when increasing/decreasing
-# the font size in a running terminal.
+font_size        10
 font_size_delta 2
 
-
-# Adjust the cell dimensions.
-# You can use either numbers, which are interpreted as pixels or percentages
-# (number followed by %), which are interpreted as percentages of the
-# unmodified values. You can use negative pixels or percentages less than
-# 100% to reduce sizes (but this might cause rendering artifacts).
 adjust_line_height 0
 adjust_column_width 0
 
@@ -39,49 +18,23 @@ adjust_column_width 0
 # and very thick lines;
 box_drawing_scale 0.001, 1, 1.5, 2
 
-# The foreground color
-foreground       #c0b18b
-
-# The background color
-background       #282828
-
-# The opacity of the background. A number between 0 and 1, where 1 is opaque and 0 is fully transparent.
-# This will only work if supported by the OS (for instance, when using a compositor under X11). Note
-# that it only sets the default background color's opacity. This is so that
-# things like the status bar in vim, powerline prompts, etc. still look good.
-# But it means that if you use a color theme with a background color in your
-# editor, it will not be rendered as transparent.  Instead you should change the
-# default background color in your kitty config and not use a background color
-# in the editor color scheme. Or use the escape codes to set the terminals
-# default colors in a shell script to launch your editor.
-# Be aware that using a value less than 1.0 is a (possibly significant) performance hit.
+# background opacity
 background_opacity 1.0
 
-# The foreground for selections
-selection_foreground #2f2f2f
-
-# The background for selections
-selection_background #d75f5f
-
-# The color and style for highlighting URLs on mouse-over. url_style can be one of:
-# none, single, double, curly
-url_color #0087BD
+# url underline
 url_style curly
 
 # The cursor color
-cursor           #cccccc
+cursor           #8fee96
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
 
-# The interval (in seconds) at which to blink the cursor. Set to zero to
-# disable blinking. Note that numbers smaller than repaint_delay will be
-# limited to repaint_delay.
+# The interval (in seconds) at which to blink the cursor.
 cursor_blink_interval     0.5
 
-# Stop blinking cursor after the specified number of seconds of keyboard inactivity. Set to
-# zero to never stop blinking.
-cursor_stop_blinking_after 15.0
+# Stop blinking cursor after the specified number of seconds of keyboard inactivity. 0 - never stop
+cursor_stop_blinking_after 0
 
 # Number of lines of history to keep in memory for scrolling back
 scrollback_lines 2000
@@ -111,7 +64,7 @@ shell .
 
 # Hide mouse cursor after the specified number of seconds of the mouse not being used. Set to
 # zero to disable mouse cursor hiding.
-mouse_hide_wait 3.0
+mouse_hide_wait 0.5
 
 # Set the active window to the window under the mouse when moving the mouse around
 focus_follows_mouse no
@@ -224,37 +177,42 @@ inactive_tab_font_style normal
 # The 16 terminal colors. There are 8 basic colors, each color has a dull and
 # bright version.
 
+foreground            #C5C8C6
+background            #1D1F21
+selection_foreground  #000000
+selection_background  #FFFACD
+url_color             #0087BD
+
 # black
-color0   #000000
-color8   #767676
+color0   #282a36
+color8   #282a36
 
 # red
-color1   #cc0403
-color9   #f2201f
+color1   #FF5C57
+color9   #FF5C57
 
 # green
-color2   #19cb00
-color10  #23fd00
+color2   #5AF78E
+color10  #5AF78E
 
 # yellow
-color3   #cecb00
-color11  #fffd00
+color3   #F3F99D
+color11  #F3F99D
 
 # blue
-color4  #0d73cc
-color12 #1a8fff
+color4  #57C7FF
+color12 #57C7FF
 
 # magenta
-color5   #cb1ed1
-color13  #fd28ff
+color5   #FF6AC1
+color13  #FF6AC1
 
 # cyan
-color6   #0dcdcd
-color14  #14ffff
+color6   #9AEDFE
+color14  #9AEDFE
 
 # white
-color7   #dddddd
-color15  #ffffff
+color7   #F1F1F0
 
 
 # Key mapping
@@ -294,9 +252,9 @@ map ctrl+shift+end       scroll_end
 map ctrl+shift+h         show_scrollback
 
 # Window management
+map super+n             new_os_window
+map super+w             close_window
 map ctrl+shift+enter    new_window
-map ctrl+shift+n        new_os_window
-map ctrl+shift+w        close_window
 map ctrl+shift+]        next_window
 map ctrl+shift+[        previous_window
 map ctrl+shift+f        move_window_forward
@@ -312,6 +270,7 @@ map ctrl+shift+7        seventh_window
 map ctrl+shift+8        eighth_window
 map ctrl+shift+9        ninth_window
 map ctrl+shift+0        tenth_window
+
 # You can open a new window running an arbitrary program, for example:
 # map ctrl+shift+y      new_window mutt
 #
@@ -395,6 +354,11 @@ map ctrl+shift+e        run_simple_kitten text url_hints
 #
 # symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
 
+# Miscellaneous
+map ctrl+shift+up      increase_font_size
+map ctrl+shift+down    decrease_font_size
+map ctrl+shift+backspace restore_font_size
+
 
 # OS specific tweaks
 
@@ -423,3 +387,5 @@ macos_option_as_alt yes
 # The number is a percentage of maximum volume.
 # See man XBell for details.
 x11_bell_volume 80
+
+allow_remote_control yes
