--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,12 @@
 # vim:fileencoding=utf-8:ft=conf
 
-font_family      Hack Nerd Font Mono
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+font_family      Hack Nerd Font
+italic_font      BlexMono Nerd Font
+bold_font        BlexMono Nerd Font
+bold_italic_font BlexMono Nerd Font
 
 # Font size (in pts)
-font_size        10
+font_size        11
 font_size_delta 2
 
 adjust_line_height 0
@@ -178,7 +178,7 @@ inactive_tab_font_style normal
 # bright version.
 
 foreground            #C5C8C6
-background            #1D1F21
+background            #212121
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
