--- a/chunkwm/.chunkwmrc
+++ b/chunkwm/.chunkwmrc
@@ -64,3 +64,7 @@ chunkc set focused_border_radius         10
 # chunkc core::load border.so
 chunkc core::load tiling.so
 chunkc core::load ffm.so
+chunkc core::load blur.so
+
+# Tiling rules for specific apps
+chunkc tiling::rule --name \"Android Emulator\" --state float
