--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # vim:fileencoding=utf-8:ft=conf
 
 font_family      Hack Nerd Font
-italic_font      BlexMono Nerd Font
-bold_font        BlexMono Nerd Font
-bold_italic_font BlexMono Nerd Font
+italic_font      auto
+bold_font        auto
+bold_italic_font auto
 
 # Font size (in pts)
 font_size        11
@@ -144,7 +144,8 @@ term xterm-kitty
 window_border_width 0
 
 # The window margin (in pts) (blank area outside the border)
-window_margin_width 15
+# window_margin_width 15
+window_margin_width 0
 
 # The window padding (in pts) (blank area between the text and the window border)
 window_padding_width 0
