--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,12 +1,12 @@
 # vim:fileencoding=utf-8:ft=conf
 
-font_family      Hack Nerd Font
+font_family      Iosevka
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        11
+font_size        14
 font_size_delta 2
 
 adjust_line_height 0
