:sparkles: (kitty) replace Iosevka with Iosevka Term since ligatures aren't supported

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf
 
-font_family      Iosevka
+font_family      Iosevka Term
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
@@ -61,10 +61,6 @@ select_by_word_characters :@-./_~?&=%+#
 # Note that on macOS if you change this, you might need to add --login to
 # ensure that the shell starts in interactive mode and reads its rc files.
 shell .
-
-# Hide mouse cursor after the specified number of seconds of the mouse not being used. Set to
-# zero to disable mouse cursor hiding.
-mouse_hide_wait 0.5
 
 # Set the active window to the window under the mouse when moving the mouse around
 focus_follows_mouse no
