:truck: (tmux) move tmux to config

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 # -- general -------------------------------------------------------------------
 
-set -g default-terminal "xterm-256color-italic"
+set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 set -s escape-time 10                     # faster command sequences
