:sparkles: (tmux) switch to screen-256color term

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -1,7 +1,6 @@
 # -- general -------------------------------------------------------------------
 
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color-italic:Tc"
+set -g default-terminal "screen-256color"
 
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
