:sparkles: (tmux) update colors

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -82,7 +82,7 @@ bind -n S-Right next-window
 set -sg escape-time 0
 
 # Reload tmux config
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/.tmux.conf
 
 # create session
 bind C-c new-session
@@ -92,18 +92,18 @@ bind C-f command-prompt -p find-session 'switch-client -t %%'
 # THEME
 set -g status-interval 1
 
-set -g status-fg colour238
-set -g status-bg colour233
+set -g status-style fg=colour238
+set -g status-style bg=colour233
 
 # left status bar
-set -g status-left-bg colour233
-set -g status-left-fg colour243
+set -g status-left-style bg=colour233
+set -g status-left-style fg=colour243
 set -g status-left-length 40
 set -g status-left "#[fg=colour232,bg=colour245,bold] #S #[fg=colour245,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
 
 # right status bar
-set -g status-right-bg colour233
-set -g status-right-fg colour243
+set -g status-right-style bg=colour233
+set -g status-right bg=colour243
 set -g status-right-length 150
 set -g status-right "Battery: #[fg=colour240,bg=colour233,bold]#(pmset -g batt | awk 'NR==2 { gsub(/;/,\"\"); print $3 }') #[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
 
@@ -112,12 +112,12 @@ set -g window-status-format "  #I:#W#F  "
 set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour250,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
 
 # Current window status
-set -g window-status-current-bg black
-set -g window-status-current-fg colour250
+set -g window-status-current-style bg=black
+set -g window-status-current-style fg=colour250
 
 # Window with activity status
-set -g window-status-activity-bg colour243 # fg and bg are flipped here due to
-set -g window-status-activity-fg colour233 # a bug in tmux
+set -g window-status-activity-style bg=colour243 # fg and bg are flipped here due to
+set -g window-status-activity-style fg=colour233 # a bug in tmux
 
 # Window separator
 set -g window-status-separator ""
@@ -126,12 +126,12 @@ set -g window-status-separator ""
 set -g status-justify centre
 
 # Pane border
-set -g pane-border-bg default
-set -g pane-border-fg colour235
+set -g pane-border-style bg=default
+set -g pane-border-style fg=colour235
 
 # Active pane border
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour240
+set -g pane-active-border-style bg=default
+set -g pane-active-border-style fg=colour240
 
 # Pane number indicator
 set -g display-panes-colour colour233
@@ -142,25 +142,14 @@ set -g clock-mode-colour colour240
 set -g clock-mode-style 24
 
 # Message
-set -g message-bg colour245
-set -g message-fg colour232
+set -g message-style bg=colour245
+set -g message-style fg=colour232
 
 # Command message
-set -g message-command-bg colour233
-set -g message-command-fg colour250
+set -g message-command-style bg=colour233
+set -g message-command-style fg=colour250
 
 # Mode
-set -g mode-bg colour243
-set -g mode-fg colour232
-
-
-
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-#set -g @resurrect-strategy-nvim 'session'
-#set -g @plugin 'tmux-plugins/tmux-yank'
-
-run '~/.tmux/plugins/tpm/tpm'
+set -g mode-style bg=colour243
+set -g mode-style fg=colour232
 
