:sparkles: (tmux, nvim, scripts) configure italics

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -30,7 +30,7 @@ setw -g mode-keys vi
 setw -g monitor-activity on
 
 # reload configuration
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+bind r source-file ~/.config/tmux/.tmux.conf \; display '~/.config/tmux/.tmux.conf sourced'
 
 bind-key v split-window -h
 bind-key s split-window -v
@@ -81,9 +81,6 @@ bind -n S-Right next-window
 # No delay for escape key press
 set -sg escape-time 0
 
-# Reload tmux config
-bind r source-file ~/.config/tmux/.tmux.conf
-
 # create session
 bind C-c new-session
 
@@ -105,7 +102,7 @@ set -g status-left "#[fg=colour232,bg=colour245,bold] #S #[fg=colour245,bg=colou
 set -g status-right-style bg=colour233
 set -g status-right bg=colour243
 set -g status-right-length 150
-set -g status-right "Battery: #[fg=colour240,bg=colour233,bold]#(pmset -g batt | awk 'NR==2 { gsub(/;/,\"\"); print $3 }') #[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
+set -g status-right "Battery: #[fg=colour240,bg=colour233,bold]#(pmset -g batt | awk 'NR==2 { gsub(/;/,\"\"); print $3 }') #[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]"
 
 ## Window status
 set -g window-status-format "  #I:#W#F  "
