--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -30,7 +30,7 @@ setw -g mode-keys vi
 setw -g monitor-activity on
 
 # reload configuration
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+bind r source-file ~/.config/tmux/.tmux.conf \; display '~/.config/tmux/.tmux.conf sourced'
 
 bind-key v split-window -h
 bind-key s split-window -v
@@ -81,9 +81,6 @@ bind -n S-Right next-window
 # No delay for escape key press
 set -sg escape-time 0
 
-# Reload tmux config
-bind r source-file ~/.config/tmux/.tmux.conf
-
 # create session
 bind C-c new-session
 
@@ -105,51 +102,51 @@ set -g status-left "#[fg=colour232,bg=colour245,bold] #S #[fg=colour245,bg=colou
 set -g status-right-style bg=colour233
 set -g status-right bg=colour243
 set -g status-right-length 150
-set -g status-right "Battery: #[fg=colour240,bg=colour233,bold]#(pmset -g batt | awk 'NR==2 { gsub(/;/,\"\"); print $3 }') #[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
+set -g status-right "Battery: #[fg=colour240,bg=colour233,bold]#(pmset -g batt | awk 'NR==2 { gsub(/;/,\"\"); print $3 }') #[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]"
 
-# Window status
+## Window status
 set -g window-status-format "  #I:#W#F  "
-set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour250,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour250,bold] #I:#W#F #[fg=colour233,bg=black,bold]"
 
-# Current window status
+## Current window status
 set -g window-status-current-style bg=black
 set -g window-status-current-style fg=colour250
 
-# Window with activity status
-set -g window-status-activity-style bg=colour243 # fg and bg are flipped here due to
-set -g window-status-activity-style fg=colour233 # a bug in tmux
+## Window with activity status
+set -g window-status-activity-style bg=colour233
+set -g window-status-activity-style fg=colour243
 
-# Window separator
+## Window separator
 set -g window-status-separator ""
 
-# Window status alignment
+## Window status alignment
 set -g status-justify centre
 
-# Pane border
+## Pane border
 set -g pane-border-style bg=default
 set -g pane-border-style fg=colour235
 
-# Active pane border
+## Active pane border
 set -g pane-active-border-style bg=default
 set -g pane-active-border-style fg=colour240
 
-# Pane number indicator
+## Pane number indicator
 set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
 
-# Clock mode
+## Clock mode
 set -g clock-mode-colour colour240
 set -g clock-mode-style 24
 
-# Message
-set -g message-style bg=colour245
-set -g message-style fg=colour232
+## Message
+#set -g message-style bg=colour245
+#set -g message-style fg=colour232
 
-# Command message
-set -g message-command-style bg=colour233
-set -g message-command-style fg=colour250
+## Command message
+#set -g message-command-style bg=colour233
+#set -g message-command-style fg=colour250
 
-# Mode
-set -g mode-style bg=colour243
-set -g mode-style fg=colour232
+## Mode
+#set -g mode-style bg=colour243
+#set -g mode-style fg=colour232
 
