--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf
 
-font_family      Iosevka Term
+font_family      JetBrains Mono
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
