--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,4 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf
+include ./dark-theme.conf
+
+allow_remote_control yes
 
 font_family      JetBrains Mono
 italic_font      auto
@@ -169,47 +172,6 @@ active_tab_font_style bold-italic
 inactive_tab_foreground #444
 inactive_tab_background #999
 inactive_tab_font_style normal
-
-
-# The 16 terminal colors. There are 8 basic colors, each color has a dull and
-# bright version.
-
-foreground            #C5C8C6
-background            #212121
-selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-
-# black
-color0   #282a36
-color8   #282a36
-
-# red
-color1   #FF5C57
-color9   #FF5C57
-
-# green
-color2   #5AF78E
-color10  #5AF78E
-
-# yellow
-color3   #F3F99D
-color11  #F3F99D
-
-# blue
-color4  #57C7FF
-color12 #57C7FF
-
-# magenta
-color5   #FF6AC1
-color13  #FF6AC1
-
-# cyan
-color6   #9AEDFE
-color14  #9AEDFE
-
-# white
-color7   #F1F1F0
 
 
 # Key mapping
