--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -20,6 +20,27 @@
                     "directory": "/tmp/ccls"
                 }
             }
+        },
+
+        "haskell": {
+          "command": "hie-wrapper",
+          "args": ["--lsp"],
+          "rootPatterns": [
+            "*.cabal",
+            "stack.yaml",
+            "cabal.project",
+            "package.yaml"
+          ],
+          "filetypes": [
+            "hs",
+            "lhs",
+            "haskell"
+          ],
+          "initializationOptions": {
+            "languageServerHaskell": {
+            }
         }
     }
+  }
 }
+
