--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # vim:fileencoding=utf-8:ft=conf
-include ./dark-theme.conf
+include ./ayu.conf
 
 allow_remote_control yes
 
@@ -9,7 +9,7 @@ bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        14
+font_size        16
 font_size_delta 2
 
 adjust_line_height 0
